tests/NormalTests/paczka1/small_fuzzy/95558045.err
Error in line 2: S933 S236 53,2
Error in line 3: 20M1 S391 90,3
Error in line 5: S933 S933 13,1
Error in line 11: 20M1 S933 19,1
